--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,8 @@
     <li><%= post.title %>
     <li><%= post.description %>
       <%= link_to "edit", edit_post_path(post) %>
-      <%= link_to "delete", "/posts/#{post.id}/delete" %>
+      <%= link_to "delete", "/posts/post.id/delete" %>
+      <%= link_to "show", post_path(post) %>
+
   </ul>
 <% end %>
